# apertium-usp

./: Makefile.am  README  README.md  apertium-usp.pc.in  apertium-usp.usp.lexc  apertium-usp.usp.mor.twol  apertium-usp.usp.phon  apertium-usp.usp.rlx  apertium-usp.usp.spellrelax  apertium-usp.usp.tagged  apertium-usp.usp.twol  configure.ac  modes.xml  usp.lexc.hfst  usp.prob
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-morph-output.txt  analysis-unknown-expected.txt  analysis-unknown-output.txt  tests.json
